Minor grammar fixes

--- a/cv.tex
+++ b/cv.tex
@@ -53,7 +53,7 @@
     }
     \item \ongoing{} \textbf{BSc Computer Science} \dashdiv{} University College London \dashdiv{} 2019-2022
 
-      Relevant modules \& courseworks (able to provide code upon request):
+      Relevant modules \& coursework (able to provide code upon request):
 
       \begin{itemize}
 
@@ -94,7 +94,7 @@
     \item Some algorithm \& data structure:
 
     \begin{itemize}
-      \item Binary search tree, hash table, queue, graphs (Path finding, MST, etc.), dynamic programming.
+      \item Binary search tree, hash table, queue, graphs (Pathfinding, MST, etc.), dynamic programming.
     \end{itemize}
 
     \item Basic cryptography ((a)symmetric encryption, hashing, Merkle tree, etc.) \& security (web \& binary).
@@ -122,7 +122,7 @@
 
     \begin{itemize}
       \item Average of \texttildelow{}9000 daily searches for the last 365 days.
-      \item Backend built with Node.js, using Mongodb and Elasticsearch.
+      \item Backend built with Node.js, using MongoDB and ElasticSearch.
       \item Frontend built with React, using Webpack for bundling. Acts as a PWA with ServiceWorker.
       \item Made a PDF viewer: using PDF.js for rendering, wrote own input handling (touch screen \& Macbook trackpad pinch-to-zoom, inertia scrolling, etc.).
       \item Parses the document to find matching question numbers and hence create hyperlinks in the PDF viewer between question paper and mark scheme for the same question.
@@ -140,7 +140,7 @@
     \item \textbf{go-ecbpass} \ghurl{https://github.com/micromaomao/go-ecbpass}: a deterministic, stateless pseudo-random password generator \dashdiv{} Oct 2018
 
     \begin{itemize}
-      \item Uses scrypt to derive password for each website based on its domain and the user's master password.
+      \item Uses scrypt to derive passwords for each website based on its domain and the user's master password.
     \end{itemize}
 
   \end{itemize}
