--- a/cv.tex
+++ b/cv.tex
@@ -83,10 +83,10 @@
   \section{Skills}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: C, Rust, Go, JavaScript, Python, \href{https://github.com/micromaomao/cv/blob/master/cv.tex}{\color{link}\TeX}.
+    \item Languages: C, Rust, Go, JavaScript, Python. Understands object-oriented and functional programming.
 
     \begin{itemize}
-      \item Some introduction to Haskell and Wolfram Language (Mathematica).
+      \item Currently learning C++ and Haskell.
     \end{itemize}
 
     \item Linux (scripting, programming \& server administration), Git, Docker.
@@ -97,7 +97,7 @@
       \item Binary search tree, hash table, queue, graphs (Pathfinding, MST, etc.), dynamic programming.
     \end{itemize}
 
-    \item Basic cryptography ((a)symmetric encryption, hashing, Merkle tree, etc.) \& security (web \& binary).
+    \item Basic cryptography ((a)symmetric encryption, hashing, Merkle tree, etc.) \& security (web \& native).
 
   \end{itemize}
 
@@ -148,8 +148,7 @@
   \section{Other Interests}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Able to do some basic 3D modeling \href{https://maowtm.org/Artworks/}{\color{link}(some works I've done)}; also interested in animation and graphic design.
-    \item Currently learning Japanese in spare time. (Native in Chinese and competent in English)
+    \item Able to do some basic 3D modeling with Blender \href{https://maowtm.org/Artworks/}{\color{link}(some works I've done)}; also interested in animation and graphic design.
   \end{itemize}
 
 \end{document}
