CV minor update

--- a/cv.tex
+++ b/cv.tex
@@ -116,12 +116,13 @@
     \begin{itemize}
       \item Backend built with Rust, using the \href{https://rocket.rs}{\color{link}Rocket} framework and SQLite database.
       \item Frontend built with \href{https://svelte.dev/}{\color{link}Svelte}.
+      \item Successfully notified me of server fault several times.
     \end{itemize}
 
     \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: CIE past paper quick finder \& search engine \dashdiv{} 2016-2019
 
     \begin{itemize}
-      \item Average of \texttildelow{}9000 daily searches for the last 365 days.
+      \item Average of \texttildelow{}9000 daily searches for the last 365 days; recommended by several of my high school teacher.
       \item Backend built with Node.js, using MongoDB and ElasticSearch.
       \item Frontend built with React, using Webpack for bundling. Acts as a PWA with ServiceWorker.
       \item Made a PDF viewer: using PDF.js for rendering, wrote own input handling (touch screen \& Macbook trackpad pinch-to-zoom, inertia scrolling, etc.).
