List languages in order of proficiency

--- a/cv.tex
+++ b/cv.tex
@@ -83,7 +83,7 @@
   \section{Skills}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: C, Rust, Go, JavaScript, Python. Understands object-oriented and functional programming.
+    \item Languages: Go, Rust, JavaScript, C, Python. Understands object-oriented and functional programming.
 
     \begin{itemize}
       \item Currently learning C++ and Haskell.
