Some minor update

--- a/cv.tex
+++ b/cv.tex
@@ -123,7 +123,7 @@
 
     \begin{itemize}
       \item Average of \texttildelow{}9000 daily searches for the last 365 days; recommended by several of my high school teacher.
-      \item Backend built with Node.js, using MongoDB and ElasticSearch.
+      \item Backend built with Node.js, using MongoDB and Elasticsearch.
       \item Frontend built with React, using Webpack for bundling. Acts as a PWA with ServiceWorker.
       \item Made a PDF viewer: using PDF.js for rendering, wrote own input handling (touch screen \& Macbook trackpad pinch-to-zoom, inertia scrolling, etc.).
       \item Parses the document to find matching question numbers and hence create hyperlinks in the PDF viewer between question paper and mark scheme for the same question.
@@ -149,7 +149,7 @@
   \section{Other Interests}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Able to do some basic 3D modeling with Blender \href{https://maowtm.org/Artworks/}{\color{link}(some works I've done)}; also interested in animation and graphic design.
+    \item Able to do some basic 3D modelling with Blender \href{https://maowtm.org/Artworks/}{\color{link}(some works I've done)}; also interested in animation and graphic design.
   \end{itemize}
 
 \end{document}
