Yeah. Remove the "Some" before "Algorithm & data structure:"

--- a/cv.tex
+++ b/cv.tex
@@ -91,7 +91,7 @@
 
     \item Linux (scripting, programming \& server administration), Git, Docker.
 
-    \item Some algorithm \& data structure:
+    \item Algorithm \& data structure:
 
     \begin{itemize}
       \item Binary search tree, hash table, queue, graphs (Pathfinding, MST, etc.), dynamic programming.
