Projects -> personal projects

--- a/cv.tex
+++ b/cv.tex
@@ -101,13 +101,11 @@
 
   \end{itemize}
 
-  \section{Projects}
+  \section{Personal Projects}
 
   \def\ghurl#1{%
     \href{#1}{({\blueghicon{}})}%
   }
-
-  {\color{black!70!white}(Everything listed below are my own projects.)}
 
   \begin{itemize}
 
