--- a/cv.tex
+++ b/cv.tex
@@ -75,7 +75,7 @@
 
       \end{itemize}
 
-    \item \textbf{A-Level} \dashdiv{} 2017-2019
+    \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
 
       Math, Further Math, Physics and Economics \dashdiv{} A*A*A*A*
   \end{itemize}
@@ -120,7 +120,7 @@
     \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: CIE past paper quick finder \& search engine \dashdiv{} 2016-2019
 
     \begin{itemize}
-      \item Average of \texttildelow{}9000 daily searches for the last 365 days; recommended by several of my high school teacher.
+      \item Average of \texttildelow{}9000 daily searches for the last 365 days; recommended by several of my high school teachers.
       \item Backend built with Node.js, using MongoDB and Elasticsearch.
       \item Frontend built with React, using Webpack for bundling. Acts as a PWA with ServiceWorker.
       \item Made a PDF viewer: using PDF.js for rendering, wrote own input handling (touch screen \& Macbook trackpad pinch-to-zoom, inertia scrolling, etc.).
