--- a/styles.tex
+++ b/styles.tex
@@ -16,10 +16,16 @@
 
 \makeatletter
 \DeclareRobustCommand\tlabel{%
-  \tikz[overlay, baseline=(t.base)]{\node[anchor=east, font=\normalfont, color=black!30!white] (t) {\#\#};}%
+  \tikz[overlay, remember picture, baseline=(nlabel.base)]{\node[anchor=base, inner sep=0pt] (nlabel) {};}%
+}
+\DeclareRobustCommand\posttlabel{%
+  \tikz[overlay, remember picture]{
+    \coordinate (ll) at (nlabel.south -| current page.north west);
+    \path[fill=link] ($(ll)-(0.1cm,0pt)$) rectangle ++(0.2cm, 0.9em);
+  }%
 }
 \renewcommand\section[1]{%
-  \@startsection{section}{1}{\z@}{0.1\baselineskip}{0.1\baselineskip \@minus 0.1\baselineskip}{\bfseries\MakeUppercase}*{\tlabel{}#1}%
+  \@startsection{section}{1}{\z@}{0.1\baselineskip}{0.1\baselineskip \@minus 0.1\baselineskip}{\bfseries\MakeUppercase}*{\tlabel{}#1\makebox[0pt]{\posttlabel}}%
 }
 \makeatother
 
