Don't highlight stuff

--- a/cv.tex
+++ b/cv.tex
@@ -32,7 +32,7 @@
   \begin{itemize}
     \def\ongoing{%
       \tikz[baseline=(t.base)]{
-        \node[fill=orange!30!white, use as bounding box, inner sep=0.25em, font=\small] (t) {\textsc{1st year}}
+        \node[fill=link!10!white, use as bounding box, inner sep=0.25em, font=\small] (t) {\textsc{1st year}}
       }%
     }
     \item \ongoing{} \textbf{BSc Computer Science} \dashdiv{} University College London \dashdiv{} 2019-2022
