Change course title form from x: y to x (y)

--- a/cv.tex
+++ b/cv.tex
@@ -41,7 +41,7 @@
 
       \begin{itemize}
 
-        \item Principles of Programming: C \& Haskell
+        \item Principles of Programming (C \& Haskell)
 
         \begin{itemize}
           \item Built a journey planner for the\tflicon{} London rail network (tube \& others) entirely in C.
@@ -51,7 +51,7 @@
           \end{itemize}
         \end{itemize}
 
-        \item Engineering Challenges 1: digital circuit, MIPS architecture.
+        \item Engineering Challenges 1 (digital circuit)
 
         \begin{itemize}
           \item Built a simplified MIPS computer (8 instructions implemented) in a 2 person team on FPGA by drawing schematics. Self-taught Verilog and applied to the project.
