Add the tetris bot to master

--- a/cv.tex
+++ b/cv.tex
@@ -51,6 +51,12 @@
           \end{itemize}
         \end{itemize}
 
+        \item Design and Professional Skills
+
+        \begin{itemize}
+          \item Coursework: Wrote a Tetris bot in Python which can keep itself alive long enough to reach a 1000 block limit.
+        \end{itemize}
+
         \item Engineering Challenges 1 (digital circuit)
 
         \begin{itemize}
