Design and prof skills (Python)

--- a/cv.tex
+++ b/cv.tex
@@ -51,7 +51,7 @@
           \end{itemize}
         \end{itemize}
 
-        \item Design and Professional Skills
+        \item Design and Professional Skills (Python)
 
         \begin{itemize}
           \item Coursework: Wrote a Tetris bot in Python which can keep itself alive long enough to reach a 1000 block limit.
