--- a/cv.tex
+++ b/cv.tex
@@ -54,7 +54,7 @@
         \item Design and Professional Skills (Python)
 
         \begin{itemize}
-          \item Coursework: Wrote a Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 person class.
+          \item Coursework: Wrote a Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 persons class.
         \end{itemize}
 
         \item Engineering Challenges 1 (digital circuit)
