"First year Computer Science undergraduate ..."

--- a/cv.tex
+++ b/cv.tex
@@ -7,7 +7,7 @@
     \coordinate (topright) at (\textwidth, 0);
 
     \node[font=\Large] (name) at (topleft) {Tingmao Wang};
-    \node (bio) at (name.south west) {{\color{black!50!white}\emph{(\today)}} Computer Science undergraduate at\uclicon{}UCL};
+    \node (bio) at (name.south west) {{\color{black!50!white}\emph{(\today)}} First year Computer Science undergraduate at\uclicon{}UCL};
 
     \node[anchor=north east, text width=0.4\textwidth, align=flush right, inner ysep=0cm] (contacts) at (topright)
       {m@maowtm.org \\
