--- a/cv.tex
+++ b/cv.tex
@@ -30,32 +30,20 @@
   \section{Education}
 
   \begin{itemize}
-    \def\ongoing{%
-      \tikz[baseline=(t.base)]{
-        \node[fill=link!10!white, use as bounding box, inner sep=0.25em, font=\small] (t) {\textsc{1st year}}
-      }%
-    }
-    \item \ongoing{} \textbf{BSc Computer Science} \dashdiv{} University College London \dashdiv{} 2019-2022
+    \item \textbf{BSc Computer Science} \dashdiv{} University College London \dashdiv{} 2019-2022
 
-      Relevant modules \& coursework (able to provide code upon request):
+      Notable coursework (able to provide code upon request):
 
       \begin{itemize}
-
-        \item Principles of Programming (C \& Haskell)
-
-        \begin{itemize}
-          \item Built a journey planner for the\tflicon{} London rail network (tube \& others) entirely in C.
-
-          \begin{itemize}
-            \item Shows paths with least station, least interchange or paths that avoid certain fare zones.
-          \end{itemize}
-        \end{itemize}
-
-        \item Design and Professional Skills (Python)
+        \item A journey planner for the\tflicon{} London rail network (tube \& others) entirely in C.
 
         \begin{itemize}
-          \item Coursework: Wrote a Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 persons class.
+          \item Shows paths with least station, least interchange or paths that avoid certain fare zones.
         \end{itemize}
+
+        \item A Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 persons class.
+
+        \item A parser \& type-checker for a custom language with nested functions, lambdas and structures (codegen TODO).
       \end{itemize}
 
     \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
@@ -66,21 +54,11 @@
   \section{Skills}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: Go, Rust, JavaScript, C, Python. Understands object-oriented and functional programming.
+    \item Languages: Rust, JavaScript/TypeScript, Python, Go, Java/Kotlin, C; \TeX.
 
-    \begin{itemize}
-      \item Currently learning C++ and Haskell.
-    \end{itemize}
+    \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker; Web \& Android development.
 
-    \item Linux (scripting, programming \& server administration), Git, Docker.
-
-    \item Algorithm \& data structure:
-
-    \begin{itemize}
-      \item Binary search tree, hash table, queue, graphs (Pathfinding, MST, etc.), dynamic programming.
-    \end{itemize}
-
-    \item Basic cryptography ((a)symmetric encryption, hashing, Merkle tree, etc.) \& security (web \& native).
+    \item Security (web \& native) \& Basic cryptography.
 
   \end{itemize}
 
@@ -97,13 +75,12 @@
     \begin{itemize}
       \item Backend built with Rust, using the \href{https://rocket.rs}{\color{link}Rocket} framework and SQLite database.
       \item Frontend built with \href{https://svelte.dev/}{\color{link}Svelte}.
-      \item Successfully notified me of server fault several times.
     \end{itemize}
 
     \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: CIE past paper quick finder \& search engine \dashdiv{} 2016-2019
 
     \begin{itemize}
-      \item Average of \texttildelow{}9000 daily searches for the last 365 days; recommended by several of my high school teachers.
+      \item Average of \texttildelow{}9000 daily searches over 365 days (2019-2020); recommended by a lot of teachers.
       \item Backend built with Node.js, using MongoDB and Elasticsearch.
       \item Frontend built with React, using Webpack for bundling. Acts as a PWA with ServiceWorker.
       \item Made a PDF viewer: using PDF.js for rendering, wrote own input handling (touch screen \& Macbook trackpad pinch-to-zoom, inertia scrolling, etc.).
@@ -127,10 +104,22 @@
 
   \end{itemize}
 
+  \section{Competition}
+
+  \begin{itemize}
+    \item Facebook \dashdiv{} Hack-a-project \dashdiv{} 29 Feb 2020
+    \begin{itemize}
+      \item Team of 4 people won second-place (against 8 other teams)
+      \item Designed a baisc React \& Nodejs App \ghurl{https://github.com/HAP-Team4/front-end} for bringing people who want to watch the same movie together.
+    \end{itemize}
+  \end{itemize}
+
   \section{Other Interests}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Able to do some basic 3D modelling with Blender \href{https://maowtm.org/Artworks/}{\color{link}(some works I've done)}; also interested in animation and graphic design.
+    \item Able to do some basic 3D modelling with Blender \href{https://maowtm.org/Artworks/}{\color{link}(some works I've done)}; also interested in animation and design.
+
+    \item Studying university-level mathematics on my own: Analysis, Linear Algebra, Differential Equations.
   \end{itemize}
 
 \end{document}
