--- a/styles.tex
+++ b/styles.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper]{article}
 \usepackage[utf8x]{inputenc}
+\usepackage{microtype}
 \usepackage[english]{babel}
 \usepackage[calc,showdow,english]{datetime2}
 \usepackage[margin=1cm]{geometry}
@@ -10,6 +11,7 @@
 \usepackage{enumitem}
 \usepackage{xcolor}
 \usepackage{textcomp}
+\usepackage{amsmath}
 \usetikzlibrary{calc}
 \graphicspath{{icons/}}
 \input{icons.tex}
