--- a/cv.tex
+++ b/cv.tex
@@ -32,7 +32,7 @@
   \begin{itemize}
     \item \textbf{BSc Computer Science} \dashdiv{} University College London \dashdiv{} 2019-2022
 
-      Notable coursework (able to provide code upon request):
+      Have consistently achieved high grades. Notable coursework (able to provide code upon request):
 
       \begin{itemize}
         \item A journey planner for the\tflicon{} London rail network (tube \& others) entirely in C.
@@ -43,7 +43,7 @@
 
         \item A Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 persons class.
 
-        \item A parser \& type-checker for a custom language with nested functions, lambdas and structures (codegen TODO).
+        \item Designed and wrote a system specification for a hypothetical good delivery service for vulnerable people during COVID, matching requests with volunteers with an efficient algorithm.
       \end{itemize}
 
     \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
@@ -58,7 +58,7 @@
 
     \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker; Web \& Android development.
 
-    \item Security (web \& native) \& Basic cryptography.
+    \item Security (web \& native) \& Basic cryptography. \href{https://blog.maowtm.org/ct/en.html}{\color{link}Blog article on certificate transparency}
 
   \end{itemize}
 
