--- a/cv.tex
+++ b/cv.tex
@@ -54,7 +54,7 @@
   \section{Skills}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: Rust, JavaScript/TypeScript, Python, Go, Java/Kotlin, C; \TeX.
+    \item Languages: Rust, JavaScript/TypeScript, Python, Go, Java/Kotlin, C++; \TeX.
 
     \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker; Web \& Android development.
 
@@ -80,7 +80,7 @@
     \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: CIE past paper quick finder \& search engine \dashdiv{} 2016-2019
 
     \begin{itemize}
-      \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a lot of teachers.
+      \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
       \item Backend built with Node.js, using MongoDB and Elasticsearch.
       \item Frontend built with React, using Webpack for bundling. Acts as a PWA with ServiceWorker.
       \item Made a PDF viewer: using PDF.js for rendering, wrote own input handling (touch screen \& Macbook trackpad pinch-to-zoom, inertia scrolling, etc.).
