--- a/cv.tex
+++ b/cv.tex
@@ -56,9 +56,11 @@
   \begin{itemize}[itemsep=0.1\parskip]
     \item Languages: Rust, JavaScript/TypeScript, Python, Go, Java/Kotlin, C++; \TeX.
 
-    \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker; Web \& Android development.
+    \item Web development: React/\href{https://svelte.dev/}{\color{link}Svelte}, Nodejs, Webpack. Plain CSS \& SCSS.
 
-    \item Security (web \& native) \& Basic cryptography. \href{https://blog.maowtm.org/ct/en.html}{\color{link}Blog article on certificate transparency}
+    \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker. Some basic experience with OpenGL and Android native development.
+
+    \item Security (web \& native) \& Basic cryptography. \href{https://blog.maowtm.org/ct/en.html}{\color{link}Interactive blog article on certificate transparency}
 
   \end{itemize}
 
@@ -77,7 +79,7 @@
       \item Frontend built with \href{https://svelte.dev/}{\color{link}Svelte}.
     \end{itemize}
 
-    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: CIE past paper quick finder \& search engine \dashdiv{} 2016-2019
+    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: Past paper finder \& search engine for a high school exam board \dashdiv{} 2016-2019
 
     \begin{itemize}
       \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
