--- a/cv.tex
+++ b/cv.tex
@@ -51,10 +51,33 @@
       Math, Further Math, Physics and Economics \dashdiv{} A*A*A*A*
   \end{itemize}
 
+  \section{Work Experience}
+
+  \begin{itemize}
+    \item \textbf{Frontend developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part time)
+
+    Educational game development for middle/high school subjects
+  \end{itemize}
+
+  \section{Competition}
+
+  \begin{itemize}
+    \item HIRED \dashdiv{} UK Virtual Coding Challenge \dashdiv{} 7\textsuperscript{th} Jul 2020
+    \begin{itemize}
+      \item Won first place in an algorithm contest of 180 people.
+      \item Rewarded with £1,000 Tesco gift card.
+    \end{itemize}
+    \item Facebook \dashdiv{} Hack-a-project \dashdiv{} 29\textsuperscript{th} Feb 2020
+    \begin{itemize}
+      \item Team of 4 people won second-place (against 8 other teams)
+      \item Designed a baisc React \& Nodejs App \ghurl{https://github.com/HAP-Team4/front-end} for bringing people who want to watch the same movie together.
+    \end{itemize}
+  \end{itemize}
+
   \section{Skills}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: Rust, JavaScript/TypeScript, Python, Go, Java/Kotlin, C++; \TeX.
+    \item Languages: (competent) Rust, JavaScript/TypeScript; (reasonably fluent) Python, Go, Java/Kotlin, C++; \TeX.
 
     \item Web development: React/\href{https://svelte.dev/}{\color{link}Svelte}, Nodejs, Webpack. Plain CSS \& SCSS.
 
@@ -65,10 +88,6 @@
   \end{itemize}
 
   \section{Personal Projects}
-
-  \def\ghurl#1{%
-    \href{#1}{({\blueghicon{}})}%
-  }
 
   \begin{itemize}
 
@@ -90,30 +109,6 @@
       \item Includes extensive unit tests, and builds on Travis CI.
     \end{itemize}
 
-    \item \textbf{ts-player} \ghurl{https://github.com/micromaomao/ts-player}: a terminal recorder that produces files capable of efficient random access \dashdiv{} Jan 2019
-
-    \begin{itemize}
-      \item Written in Go, used on Linux.
-      \item Uses \href{https://developers.google.com/protocol-buffers}{\color{link}protobuf} for storage format and \href{https://facebook.github.io/zstd/}{\color{link}zstd} for compression.
-      \item Uses the Linux termios API to execute process in monitored PTY, and a Golang binding of \href{http://www.leonerd.org.uk/code/libvterm/}{\color{link}libvterm} to parse terminal escape sequences (to get the color and position of characters right).
-    \end{itemize}
-
-    \item \textbf{go-ecbpass} \ghurl{https://github.com/micromaomao/go-ecbpass}: a deterministic, stateless pseudo-random password generator \dashdiv{} Oct 2018
-
-    \begin{itemize}
-      \item Uses scrypt to derive passwords for each website based on its domain and the user's master password.
-    \end{itemize}
-
-  \end{itemize}
-
-  \section{Competition}
-
-  \begin{itemize}
-    \item Facebook \dashdiv{} Hack-a-project \dashdiv{} 29 Feb 2020
-    \begin{itemize}
-      \item Team of 4 people won second-place (against 8 other teams)
-      \item Designed a baisc React \& Nodejs App \ghurl{https://github.com/HAP-Team4/front-end} for bringing people who want to watch the same movie together.
-    \end{itemize}
   \end{itemize}
 
   \section{Other Interests}
