--- a/cv.tex
+++ b/cv.tex
@@ -43,7 +43,7 @@
 
         \item A Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 persons class.
 
-        \item Designed and wrote a system specification for a hypothetical good delivery service for vulnerable people during COVID, matching requests with volunteers with an efficient algorithm.
+        \item Designed and wrote a system specification for a hypothetical good delivery service for vulnerable people during COVID, matching requests with volunteers with an efficient algorithm. Received a top submission award.
       \end{itemize}
 
     \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
@@ -65,7 +65,7 @@
     \item HIRED \dashdiv{} UK Virtual Coding Challenge \dashdiv{} 7\textsuperscript{th} Jul 2020
     \begin{itemize}
       \item Won first place in an algorithm contest of 180 people.
-      \item Rewarded with £1,000 Tesco gift card.
+      \item Rewarded with £1,000 Tesco (sponsor) gift card.
     \end{itemize}
     \item Facebook \dashdiv{} Hack-a-project \dashdiv{} 29\textsuperscript{th} Feb 2020
     \begin{itemize}
