--- a/cv.tex
+++ b/cv.tex
@@ -56,7 +56,10 @@
   \begin{itemize}
     \item \textbf{Frontend developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part time)
 
-    Educational game development for middle/high school subjects
+    \begin{itemize}
+      \item Educational game development for middle/high school subjects.
+      \item Debugged a large (200 kLOC) React project to make sure everything works on all major browsers.
+    \end{itemize}
   \end{itemize}
 
   \section{Competition}
