--- a/cv.tex
+++ b/cv.tex
@@ -54,11 +54,12 @@
   \section{Work Experience}
 
   \begin{itemize}
-    \item \textbf{Frontend developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part time)
+    \item \textbf{Full-stack developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part time)
 
     \begin{itemize}
-      \item Educational game development for middle/high school subjects.
+      \item Educational game development for GCSE Physics/Chemistry/Biology.
       \item Debugged a large (200 kLOC) React project to make sure everything works on all major browsers.
+      \item Implemented new requirements in the existing PHP (Symfony) based system.
     \end{itemize}
   \end{itemize}
 
@@ -84,15 +85,24 @@
 
     \item Web development: React/\href{https://svelte.dev/}{\color{link}Svelte}, Nodejs, Webpack. Plain CSS \& SCSS.
 
-    \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker. Some basic experience with OpenGL and Android native development.
+    \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker. % Some basic experience with OpenGL and Android native development.
 
-    \item Security (web \& native) \& Basic cryptography. \href{https://blog.maowtm.org/ct/en.html}{\color{link}Interactive blog article on certificate transparency}
+    \item Security (web \& native) \& Basic cryptography.
 
   \end{itemize}
 
   \section{Personal Projects}
 
   \begin{itemize}
+
+    \item \textbf{ctclient} \ghurl{https://github.com/micromaomao/ctclient}: Certificate Transparency Log client \dashdiv{} Jul-Aug 2020
+
+    \begin{itemize}
+      \item Written in Rust, following \href{https://tools.ietf.org/html/rfc6962}{\color{link}RFC-6962}.
+      \item Supports monitoring of CT logs and checking certificates (e.g.\ to see if a new certificate has been issued for a certain domain). Is able to check proofs and detect log misbehaviour.
+      \item Companion project 1: \href{https://blog.maowtm.org/ct/en.html}{\color{link}Interactive blog article on certificate transparency}
+      \item Companion project 2 (work in progress): a public-facing, open source certificate monitoring service.
+    \end{itemize}
 
     \item \href{https://status.maowtm.org}{\color{link}\textbf{status.maowtm.org}} \ghurl{https://github.com/micromaomao/serverwatch}: simple server monitoring with web push notification \dashdiv{} Aug-Sept 2019.
 
@@ -101,7 +111,16 @@
       \item Frontend built with \href{https://svelte.dev/}{\color{link}Svelte}.
     \end{itemize}
 
-    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: Past paper finder \& search engine for a high school exam board \dashdiv{} 2016-2019
+    \item \href{https://leafvote.mww.moe}{\color{link}\textbf{leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: Real-time live voting \dashdiv{} Aug 2018
+
+    \begin{itemize}
+      \item Technically a personal project, but was built for my high school to use in student union elections.
+      \item Each voter gets a personal QR code printed on paper, and on the day of election everyone gathers in front of an assembly screen and starts voting.
+      \item Front-end built with React, backend Node.js with MongoDB. Communicates with websocket for lower latency. Ballets generated with \LaTeX.
+      \item Successfully handled 300+ voters at once.
+    \end{itemize}
+
+    \item \href{https://paper.sc}{\color{link}\textbf{paper.sc}} \ghurl{https://github.com/micromaomao/schsrch}: An A-level/GCSE past paper finder \& search engine \dashdiv{} 2016-2019
 
     \begin{itemize}
       \item Average of \raisebox{0.2\baselineskip}{\texttildelow}9000 daily searches over 365 days (2019-2020); recommended by a number of teachers.
