--- a/cv.tex
+++ b/cv.tex
@@ -54,7 +54,7 @@
   \section{Work Experience}
 
   \begin{itemize}
-    \item \textbf{Full-stack developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part time)
+    \item \textbf{Software developer (full-stack)} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part time)
 
     \begin{itemize}
       \item Educational game development for GCSE Physics/Chemistry/Biology.
@@ -81,13 +81,13 @@
   \section{Skills}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: (competent) Rust, JavaScript/TypeScript; (reasonably fluent) Python, Go, Java/Kotlin, C++; \TeX.
+    \item Languages: (competent) Rust, JavaScript/TypeScript; (reasonably fluent) Python, C++, Java/Kotlin; \TeX.
 
     \item Web development: React/\href{https://svelte.dev/}{\color{link}Svelte}, Nodejs, Webpack. Plain CSS \& SCSS.
 
     \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker. % Some basic experience with OpenGL and Android native development.
 
-    \item Security (web \& native) \& Basic cryptography.
+    \item Security (web \& native) \& Basic cryptography. \href{https://blog.maowtm.org/ct/en.html}{\color{link}Interactive blog article on certificate transparency}
 
   \end{itemize}
 
@@ -104,7 +104,7 @@
       \item Companion project 2 (work in progress): a public-facing, open source certificate monitoring service.
     \end{itemize}
 
-    \item \href{https://status.maowtm.org}{\color{link}\textbf{status.maowtm.org}} \ghurl{https://github.com/micromaomao/serverwatch}: simple server monitoring with web push notification \dashdiv{} Aug-Sept 2019.
+    \item \href{https://status.maowtm.org}{\color{link}\textbf{status.maowtm.org}} \ghurl{https://github.com/micromaomao/serverwatch}: simple server monitoring with web push notification \dashdiv{} Aug-Sept 2019
 
     \begin{itemize}
       \item Backend built with Rust, using the \href{https://rocket.rs}{\color{link}Rocket} framework and SQLite database.
