--- a/cv.tex
+++ b/cv.tex
@@ -60,6 +60,9 @@
       \item Educational game development for GCSE Physics/Chemistry/Biology.
       \item Debugged a large (200 kLOC) React project to make sure everything works on all major browsers.
       \item Implemented new requirements in the existing PHP (Symfony) based system.
+      \begin{itemize}
+        \item Learned PHP and Symfony concepts on the go.
+      \end{itemize}
     \end{itemize}
   \end{itemize}
 
