--- a/cv.tex
+++ b/cv.tex
@@ -90,7 +90,7 @@
 
     \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker. % Some basic experience with OpenGL and Android native development.
 
-    \item Security (web \& native) \& Basic cryptography. \href{https://blog.maowtm.org/ct/en.html}{\color{link}Interactive blog article on certificate transparency}
+    \item Security (web \& native) \& Basic cryptography.
 
   \end{itemize}
 
