--- a/cv.tex
+++ b/cv.tex
@@ -84,9 +84,11 @@
   \section{Skills}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: (competent) Rust, JavaScript/TypeScript; (reasonably fluent) Python, C++, Java/Kotlin; \TeX.
+    \item Languages: (competent) Rust, JavaScript/TypeScript; (reasonably fluent) C++, Python, Java/Kotlin; \TeX.
 
-    \item Web development: React/\href{https://svelte.dev/}{\color{link}Svelte}, Nodejs, Webpack. Plain CSS \& SCSS.
+    \item Web development: React, Svelte, Plain CSS \& SCSS.
+
+    \item Backend: NodeJS, Rust (Rocket, Diesel), SQLite, PostgreSQL.
 
     \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker. % Some basic experience with OpenGL and Android native development.
 
@@ -105,13 +107,6 @@
       \item Supports monitoring of CT logs and checking certificates (e.g.\ to see if a new certificate has been issued for a certain domain). Is able to check proofs and detect log misbehaviour.
       \item Companion project 1: \href{https://blog.maowtm.org/ct/en.html}{\color{link}Interactive blog article on certificate transparency}
       \item Companion project 2 (work in progress): a public-facing, open source certificate monitoring service.
-    \end{itemize}
-
-    \item \href{https://status.maowtm.org}{\color{link}\textbf{status.maowtm.org}} \ghurl{https://github.com/micromaomao/serverwatch}: simple server monitoring with web push notification \dashdiv{} Aug-Sept 2019
-
-    \begin{itemize}
-      \item Backend built with Rust, using the \href{https://rocket.rs}{\color{link}Rocket} framework and SQLite database.
-      \item Frontend built with \href{https://svelte.dev/}{\color{link}Svelte}.
     \end{itemize}
 
     \item \href{https://leafvote.mww.moe}{\color{link}\textbf{leafvote}} \ghurl{https://github.com/micromaomao/leafvote}: Real-time live voting \dashdiv{} Aug 2018
