--- a/cv.tex
+++ b/cv.tex
@@ -134,9 +134,9 @@
   \section{Other Interests}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Able to do some basic 3D modelling with Blender \href{https://maowtm.org/Artworks/}{\color{link}(some works I've done)}; also interested in animation and design.
+    \item Able to do some basic 3D modelling with Blender \href{https://maowtm.org/Artworks/}{\color{link}(some works I've done)}.
 
-    \item Studying university-level mathematics on my own: Analysis, Linear Algebra, Differential Equations.
+    \item Higher mathematics unrelated to programming.
   \end{itemize}
 
 \end{document}
