--- a/cv.tex
+++ b/cv.tex
@@ -54,7 +54,7 @@
   \section{Work Experience}
 
   \begin{itemize}
-    \item \textbf{Software developer (full-stack)} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part time)
+    \item \textbf{Software developer} \dashdiv{} CORE Data Systems Ltd \dashdiv{} Jul 2020-present (part time)
 
     \begin{itemize}
       \item Educational game development for GCSE Physics/Chemistry/Biology.
