--- a/cv.tex
+++ b/cv.tex
@@ -84,7 +84,7 @@
   \section{Skills}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: (competent) Rust, JavaScript/TypeScript; (reasonably fluent) C++, Python, Java/Kotlin; \TeX.
+    \item Languages: (primary) Rust, JavaScript/TypeScript, C++; (fluent), Python, Java, Mathematica (Wolfram Language); \TeX.
 
     \item Web development: React, Svelte, Plain CSS \& SCSS.
 
