--- a/cv.tex
+++ b/cv.tex
@@ -44,6 +44,8 @@
         \item A Tetris bot in Python which can reliably keep itself alive long enough to reach a 1000 blocks limit, and scored 3rd place in the 140 persons class.
 
         \item Designed and wrote a system specification for a hypothetical good delivery service for vulnerable people during COVID, matching requests with volunteers with an efficient algorithm. Received a top submission award.
+
+        \item Led a 3-person team on implementing a bash-like shell in Java, with piping, substitution, glob expansion and 97\% test coverage. Built an \href{https://jsh-sandbox.maowtm.org}{\color{link}online sandbox} for the shell with Docker, Rust and Xterm.js.
       \end{itemize}
 
     \item \textbf{A-Level} \dashdiv{} (Shenzhen, China) Nanshan Chinese International College \dashdiv{} 2017-2019
@@ -84,16 +86,15 @@
   \section{Skills}
 
   \begin{itemize}[itemsep=0.1\parskip]
-    \item Languages: (primary) Rust, JavaScript/TypeScript, C++; (fluent), Python, Java, Mathematica (Wolfram Language); \TeX.
+    \item Languages: (primary) Rust, JavaScript/TypeScript, C++; (fluent) Go, Python, Java, Mathematica (Wolfram Language)
 
     \item Web development: React, Svelte, Plain CSS \& SCSS.
 
     \item Backend: NodeJS, Rust (Rocket, Diesel), SQLite, PostgreSQL.
 
-    \item Linux (scripting, programming, server administration and some understanding of the inner-workings), Git, Docker. % Some basic experience with OpenGL and Android native development.
+    \item Linux (scripting, programming, server administration), Git, Docker; OpenGL; some Android development.
 
     \item Security (web \& native) \& Basic cryptography.
-
   \end{itemize}
 
   \section{Personal Projects}
@@ -116,14 +117,6 @@
       \item Successfully handled 300+ voters at once.
     \end{itemize}
 
-  \end{itemize}
-
-  \section{Other Interests}
-
-  \begin{itemize}[itemsep=0.1\parskip]
-    \item Able to do some basic 3D modelling with Blender \href{https://maowtm.org/Artworks/}{\color{link}(some works I've done)}.
-
-    \item Higher mathematics unrelated to programming.
   \end{itemize}
 
 \end{document}
